FileInputType doesn't support (save|restore)FormControlState https://bugs.webkit.org/show_bug.cgi?id=80145

Patch by Marja Hölttä <marja@google.com> on 2012-03-09
Reviewed by Kent Tamura.

Source/WebCore:

This enables saving and restoring the state of file upload elements in
unsubmitted forms.

Test: fast/forms/file/recover-file-input-in-unposted-form.html

* html/BaseCheckableInputType.cpp:
(WebCore::BaseCheckableInputType::restoreFormControlState): non-const
* html/BaseCheckableInputType.h:
(BaseCheckableInputType): restoreFormControlState non-const
* html/FileInputType.cpp:
(WebCore::FileInputType::saveFormControlState): save chosen files
(WebCore):
(WebCore::FileInputType::restoreFormControlState): restore chosen files
* html/FileInputType.h:
(FileInputType): overwrite (save|restore)FormControlState
* html/HiddenInputType.cpp:
(WebCore::HiddenInputType::restoreFormControlState): non-const
* html/HiddenInputType.h:
(HiddenInputType): restoreFormControlState non-const
* html/InputType.cpp:
(WebCore::InputType::restoreFormControlState): non-const
* html/InputType.h:
(InputType): restoreFormControlState non-const
* html/PasswordInputType.cpp:
(WebCore::PasswordInputType::restoreFormControlState): non-const
* html/PasswordInputType.h:
(PasswordInputType): restoreFormControlState non-const

LayoutTests:

Tests for saving and restoring the state of file upload elements in unsubmitted forms.

* fast/forms/file/recover-file-input-in-unposted-form-expected.txt: Added.
* fast/forms/file/recover-file-input-in-unposted-form.html: Added.
* platform/wk2/Skipped: The added test needs eventSender.beginDragWithFiles.

Canonical link: https://commits.webkit.org/97871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110275 268f45cc-cd09-0410-ab3c-d52691b4dbfc