Source/WebCore/html/BaseCheckableInputType.h
@@ -43,7 +43,7 @@ protected:
 
 private:
     virtual bool saveFormControlState(String&) const OVERRIDE;
-    virtual void restoreFormControlState(const String&) const OVERRIDE;
+    virtual void restoreFormControlState(const String&) OVERRIDE;
     virtual bool appendFormData(FormDataList&, bool) const OVERRIDE;
     virtual void handleKeypressEvent(KeyboardEvent*) OVERRIDE;
     virtual bool canSetStringValue() const OVERRIDE;
